--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,15 +1,36 @@
 html {
   font-size: 62.5%;
-  font-family: "PT Sans", sans-serif;
 }
 body {
   font-size: 16px;
   font-size: 1.6rem;
+  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+}
+
+.separator {
+  border-bottom: 1px solid #f5f5f5;
+  margin: 10px 0px;
+  width: 100%;
+}
+.title {
+  font-size: 1.3rem;
+}
+.menu {
+  height: 60px;
+  text-align: center;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  margin-bottom: 60px;
+}
+.center {
+  display: flex;
+  justify-content: center;
 }
 
 .iconify {
-  width: 40px;
-  height: 40px;
+  width: 50px;
+  height: 50px;
   color: gray;
   border: 1px solid #f5f5f5;
   padding: 10px;
